--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Домашнее задание 8 -->
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -725,7 +726,7 @@
             <label for="input-check" class="check-text"
               ><span>
                 <svg class="modal-icon-accept">
-                  <use href="./img/icons.svg#icon-V"></use>
+                  <use href="./img/icons.svg#icon-v"></use>
                 </svg> </span
               >Соглашаюсь с рассылкой и принимаю</label
             >
