--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <div>
                 <ul class="contact__list">
                   <li class="contact__item contact__item--margin-right">
-                    <a href="tel:+380991111111" class="contact__link">
+                    <a href="tel:+38 096 111 11 11" class="contact__link">
                       <svg
                         class="contact__list--smartphone"
                         width="10px"
