--- a/index.html
+++ b/index.html
@@ -67,21 +67,7 @@
               </ul>
               <div>
                 <ul class="contact__list">
-                  <li class="contact__item contact__item--margin-right">
-                    <a href="tel:+38 096 111 11 11" class="contact__link">
-                      <svg
-                        class="contact__list--smartphone"
-                        width="10px"
-                        height="16px"
-                      >
-                        <use
-                          href="./img/icons-defs.svg#icon-smartphone"
-                        ></use>
-                      </svg>
-                      +38 099 111 11 11</a
-                    >
-                  </li>
-                  <li class="contact__item">
+				                  <li class="contact__item">
                     <a
                       href="mailto:info@devstudio.com"
                       class="contact__link contact__link--dark"
@@ -97,6 +83,21 @@
                       info@devstudio.com</a
                     >
                   </li>
+                  <li class="contact__item contact__item--margin-right">
+                    <a href="tel:+380961111111" class="contact__link">
+                      <svg
+                        class="contact__list--smartphone"
+                        width="10px"
+                        height="16px"
+                      >
+                        <use
+                          href="./img/icons-defs.svg#icon-smartphone"
+                        ></use>
+                      </svg>
+                      +38 096 111 11 11</a
+                    >
+                  </li>
+
                 </ul>
                 <ul class="social__list">
                   <li class="social__item">
