--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
   </head>
   <body>
 
-    <!-- Header -->
+<!-- Header -->
     <header class="header">
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a href="index.html" class="logo logo--absolute"
-              >Web<span class="logo--dark">Studio</span>
+            <a href="index.html" class="logo logo--absolute">
+              Web
+              <span class="logo--dark">Studio</span>
             </a>
             <button
               type="button"
