--- a/index.html
+++ b/index.html
@@ -31,21 +31,19 @@
               type="button"
               class="menu__button"
               aria-expanded="false"
-              data-menu-button
-            >
+              data-menu-button>
               <svg
                 width="40"
                 height="40"
-                aria-label="Переключатель мобильного меню"
-              >
+                aria-label="Переключатель мобильного меню">
                 <use
                   class="menu__icon"
-                  href="img/icons-defs.svg#icon-menu"
-                ></use>
+                  href="img/icons-defs.svg#icon-menu">
+                </use>
                 <use
                   class="menu__cross"
-                  href="img/icons-defs.svg#icon-menu-close"
-                ></use>
+                  href="img/icons-defs.svg#icon-menu-close">
+                </use>
               </svg>
             </button>
             <div class="menu__container" data-menu>
