--- a/index.html
+++ b/index.html
@@ -67,18 +67,15 @@
 				                  <li class="contact__item">
                     <a
                       href="mailto:info@devstudio.com"
-                      class="contact__link contact__link--dark"
-                    >
+                      class="contact__link contact__link--dark">
                       <svg
                         class="contact__list--mail"
                         width="16px"
-                        height="12px"
-                      >
+                        height="12px">
                         <use href="./img/icons-defs.svg#icon-mail"></use>
                       </svg>
-
-                      info@devstudio.com</a
-                    >
+                      info@devstudio.com
+                    </a>
                   </li>
                   <li class="contact__item contact__item--margin-right">
                     <a href="tel:+380961111111" class="contact__link">
