--- a/index.html
+++ b/index.html
@@ -82,13 +82,12 @@
                       <svg
                         class="contact__list--smartphone"
                         width="10px"
-                        height="16px"
-                      >
+                        height="16px">
                         <use
                           href="./img/icons-defs.svg#icon-smartphone"
                         ></use>
                       </svg>
-                      +38 096 111 11 11</a
+                      +38 067 111 11 11</a
                     >
                   </li>
 
