--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                         width="10px"
                         height="16px">
                         <use
-                          href="./img/icons-defs.svg#icon-smartphone"
-                        ></use>
+                          href="./img/icons-defs.svg#icon-smartphone">
+                        </use>
                       </svg>
-                      +38 067 111 11 11</a
-                    >
+                      +38 067 111 11 11
+                    </a>
                   </li>
 
                 </ul>
