--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
-                      class="social__link" >Instagram
+                      class="social__link">
+                      Instagram
                     </a>
                   </li>
                   <li class="social__item">
