--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
                     ./img/index/desktop-app-1x.jpg 1x,
                     ./img/index/desktop-app-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
-                />
+                  media="(min-width:1200px)"/>
 
                 <img
                   src="./img/index/desktop-app-1x.jpg"
