--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
 
                 <img
                   src="./img/index/desktop-app-1x.jpg"
-                  alt="Десктопные приложения"
-                />
+                  alt="Десктопные приложения"/>
               </picture>
               <span class="occupation__description">Десктопные приложения</span>
             </li>
