--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@
                     ./img/index/mobile-app-1x.jpg 1x,
                     ./img/index/mobile-app-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
-                />
+                  media="(min-width:1200px)"/>
 
                 <img
                   src="./img/index/mobile-app-1x.jpg"
