--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
 
                 <img
                   src="./img/index/mobile-app-1x.jpg"
-                  alt="Мобильные приложения"
-                />
+                  alt="Мобильные приложения"/>
               </picture>
               <span class="occupation__description">Мобильные приложения</span>
             </li>
