--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
                     ./img/index/design_solutions-1x.jpg 1x,
                     ./img/index/design_solutions-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
-                />
+                  media="(min-width:1200px)"/>
 
                 <img
                   src="./img/index/design_solutions-1x.jpg"
