--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
                     ./img/index/ihor-desktop-1x.jpg 1x,
                     ./img/index/ihor-desktop-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
-                />
+                  media="(min-width:1200px)"/>
                 <source
                   srcset="
                     ./img/index/ihor-tablet-1x.jpg 1x,
