--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@
                     ./img/index/ihor-tablet-1x.jpg 1x,
                     ./img/index/ihor-tablet-2x.jpg 2x
                   "
-                  media="(min-width:768px)"
-                />
+                  media="(min-width:768px)"/>
                 <source
                   srcset="
                     ./img/index/ihor-mob-1x.jpg 1x,
