--- a/index.html
+++ b/index.html
@@ -260,8 +260,7 @@
                     ./img/index/ihor-mob-1x.jpg 1x,
                     ./img/index/ihor-mob-2x.jpg 2x
                   "
-                  media="(max-width:767px)"
-                />
+                  media="(max-width:767px)"/>
                 <img
                   src="./img/index/ihor-mob-1x.jpg"
                   alt="Фото Игорь Демьяненко"
