--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
                   media="(max-width:767px)"/>
                 <img
                   src="./img/index/ihor-mob-1x.jpg"
-                  alt="Фото Игорь Демьяненко"
-                />
+                  alt="Фото Игорь Демьяненко"/>
               </picture>
 
               <h3 class="team__name">Игорь Демьяненко</h3>
