--- a/index.html
+++ b/index.html
@@ -306,8 +306,7 @@
                     ./img/index/olha-desktop-1x.jpg 1x,
                     ./img/index/olha-desktop-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
-                />
+                  media="(min-width:1200px)"/>
                 <source
                   srcset="
                     ./img/index/olha-tablet-1x.jpg 1x,
