--- a/index.html
+++ b/index.html
@@ -312,8 +312,7 @@
                     ./img/index/olha-tablet-1x.jpg 1x,
                     ./img/index/olha-tablet-2x.jpg 2x
                   "
-                  media="(min-width:768px)"
-                />
+                  media="(min-width:768px)"/>
                 <source
                   srcset="
                     ./img/index/olha-mob-1x.jpg 1x,
