--- a/index.html
+++ b/index.html
@@ -318,8 +318,7 @@
                     ./img/index/olha-mob-1x.jpg 1x,
                     ./img/index/olha-mob-2x.jpg 2x
                   "
-                  media="(max-width:767px)"
-                />
+                  media="(max-width:767px)"/>
                 <img
                   src="./img/index/olha-mob-1x.jpg"
                   alt="Фото Ольга Репина"
