--- a/index.html
+++ b/index.html
@@ -321,8 +321,7 @@
                   media="(max-width:767px)"/>
                 <img
                   src="./img/index/olha-mob-1x.jpg"
-                  alt="Фото Ольга Репина"
-                />
+                  alt="Фото Ольга Репина"/>
               </picture>
               <h3 class="team__name">Ольга Репина</h3>
               <p class="team__position">Frontend Developer</p>
