--- a/index.html
+++ b/index.html
@@ -364,8 +364,7 @@
                     ./img/index/nikolay-desktop-1x.jpg 1x,
                     ./img/index/nikolay-desktop-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
-                />
+                  media="(min-width:1200px)"/>
                 <source
                   srcset="
                     ./img/index/nikolay-tablet-1x.jpg 1x,
