--- a/index.html
+++ b/index.html
@@ -370,8 +370,7 @@
                     ./img/index/nikolay-tablet-1x.jpg 1x,
                     ./img/index/nikolay-tablet-2x.jpg 2x
                   "
-                  media="(min-width:768px)"
-                />
+                  media="(min-width:768px)"/>
                 <source
                   srcset="
                     ./img/index/nikolay-mob-1x.jpg 1x,
