--- a/index.html
+++ b/index.html
@@ -376,8 +376,7 @@
                     ./img/index/nikolay-mob-1x.jpg 1x,
                     ./img/index/nikolay-mob-2x.jpg 2x
                   "
-                  media="(max-width:767px)"
-                />
+                  media="(max-width:767px)"/>
                 <img
                   src="./img/index/nikolay-mob-1x.jpg"
                   alt="Фото Николай Тарасов"
