--- a/index.html
+++ b/index.html
@@ -379,8 +379,7 @@
                   media="(max-width:767px)"/>
                 <img
                   src="./img/index/nikolay-mob-1x.jpg"
-                  alt="Фото Николай Тарасов"
-                />
+                  alt="Фото Николай Тарасов"/>
               </picture>
               <h3 class="team__name">Николай Тарасов</h3>
               <p class="team__position">Marketing</p>
