--- a/index.html
+++ b/index.html
@@ -421,8 +421,7 @@
                     ./img/index/mikhail-desktop-1x.jpg 1x,
                     ./img/index/mikhail-desktop-2x.jpg 2x
                   "
-                  media="(min-width:1200px)"
-                />
+                  media="(min-width:1200px)"/>
                 <source
                   srcset="
                     ./img/index/mikhail-tablet-1x.jpg 1x,
