--- a/index.html
+++ b/index.html
@@ -427,8 +427,7 @@
                     ./img/index/mikhail-tablet-1x.jpg 1x,
                     ./img/index/mikhail-tablet-2x.jpg 2x
                   "
-                  media="(min-width:768px)"
-                />
+                  media="(min-width:768px)"/>
                 <source
                   srcset="
                     ./img/index/mikhail-mob-1x.jpg 1x,
