--- a/index.html
+++ b/index.html
@@ -433,8 +433,7 @@
                     ./img/index/mikhail-mob-1x.jpg 1x,
                     ./img/index/mikhail-mob-2x.jpg 2x
                   "
-                  media="(max-width:767px)"
-                />
+                  media="(max-width:767px)"/>
                 <img
                   src="./img/index/mikhail-mob-1x.jpg"
                   alt="Фото Михаил Ермаков"
