--- a/index.html
+++ b/index.html
@@ -436,8 +436,7 @@
                   media="(max-width:767px)"/>
                 <img
                   src="./img/index/mikhail-mob-1x.jpg"
-                  alt="Фото Михаил Ермаков"
-                />
+                  alt="Фото Михаил Ермаков"/>
               </picture>
               <h3 class="team__name">Михаил Ермаков</h3>
               <p class="team__position">UI Designer</p>
