--- a/index.html
+++ b/index.html
@@ -525,15 +525,15 @@
       </section>
     </main>
 
-    <!-- Footer-->
-
+<!-- Footer-->
     <footer class="footer">
       <div class="container footer__conatiner">
         <div class="footer__box">
           <div class="adress">
-            <a href="index.html" class="logo"
-              >Web<span class="logo--white">Studio</span></a
-            >
+            <a href="index.html" class="logo">
+              Web
+              <span class="logo--white">Studio</span>
+            </a>
             <address class="adress__box">
               <ul>
                 <li class="adress__item">
