--- a/index.html
+++ b/index.html
@@ -540,9 +540,9 @@
                   <p class="adress__name">г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
                 <li class="contact__item contact__item--center">
-                  <a href="mailto:info@example.com" class="contact__link--small"
-                    >info@example.com</a
-                  >
+                  <a href="mailto:info@example.com" class="contact__link--small">
+                    info@example.com
+                  </a>
                 </li>
                 <li class="contact__item contact__item--center">
                   <a href="tel:+380991111111" class="contact__link--small">
