--- a/index.html
+++ b/index.html
@@ -596,8 +596,7 @@
               name="email"
               id="email"
               placeholder="E-mail"
-              class="subscribe__input"
-            />
+              class="subscribe__input"/>
 
             <button class="button footer__button" data-modal-open>
               Подписаться
