--- a/index.html
+++ b/index.html
@@ -639,8 +639,7 @@
                 name="tel"
                 id="tel"
                 class="modal__input"
-                title="+380 (11) 111-11-11"
-              />
+                title="+380 (11) 111-11-11"/>
               <svg class="modal__icon">
                 <use href="./img/icons-defs.svg#icon-phone-ico"></use>
               </svg>
