--- a/index.html
+++ b/index.html
@@ -654,8 +654,7 @@
                 name="email"
                 id="mail"
                 required
-                class="modal__input"
-              />
+                class="modal__input"/>
               <svg class="modal__icon">
                 <use href="./img/icons-defs.svg#icon-email-ico"></use>
               </svg>
