--- a/index.html
+++ b/index.html
@@ -662,13 +662,13 @@
           </div>
 
           <div class="modal__field comment">
-            <label for="comment" class="modal__lable"> Комментарий </label>
+            <label for="comment" class="modal__lable">Комментарий</label>
             <textarea
               class="modal__textarea"
               name="comment"
               id="comment"
-              placeholder="Введите текст"
-            ></textarea>
+              placeholder="Введите текст">
+            </textarea>
           </div>
 
           <div class="agreement">
