--- a/index.html
+++ b/index.html
@@ -674,8 +674,8 @@
           <div class="agreement">
             <label class="agreemen__label">
               <span class="agreement__box">
-                <input type="checkbox" class="agreement__input" /> Соглашаюсь с
-                рассылкой и принимаю&nbsp;
+                <input type="checkbox" class="agreement__input"/>
+                 Соглашаюсь с рассылкой и принимаю&nbsp;
                 <svg class="agreement__icon">
                   <use href="img/icons-defs.svg#icon-check"></use>
                 </svg>
