--- a/index.html
+++ b/index.html
@@ -666,8 +666,7 @@
             <textarea
               class="modal__textarea"
               name="comment"
-              id="comment"
-              placeholder="Введите текст">
+              id="comment" placeholder="Введите текст">
             </textarea>
           </div>
 
