--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Домашнее задание 8.14 -->
+<!-- Домашнее задание 8.15 -->
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -664,9 +664,7 @@
           <div class="modal__field comment">
             <label for="comment" class="modal__lable">Комментарий</label>
             <textarea
-              class="modal__textarea"
-              name="comment"
-              id="comment" placeholder="Введите текст">
+              class="modal__textarea" name="comment" id="comment" placeholder="Введите текст">
             </textarea>
           </div>
 
