--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a href="index.html" class="logo logo--absolute">
-              Web
-              <span class="logo--dark">Studio</span>
-            </a>
+            <a href="index.html" class="logo logo--absolute">Web<span class="logo--dark">Studio</span></a>
             <button
               type="button"
               class="menu__button"
