--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,7 @@
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a href="index.html" class="logo logo--absolute"
-              >Web<span class="logo--dark">Studio</span>
+            <a href="index.html" class="logo logo--absolute">Web<span class="logo--dark">Studio</span>
             </a>
             <button
               type="button"
