--- a/portfolio.html
+++ b/portfolio.html
@@ -28,8 +28,7 @@
               type="button"
               class="menu__button"
               aria-expanded="false"
-              data-menu-button
-            >
+              data-menu-button>
               <svg
                 width="40"
                 height="40"
