--- a/portfolio.html
+++ b/portfolio.html
@@ -32,8 +32,7 @@
               <svg
                 width="40"
                 height="40"
-                aria-label="Переключатель мобильного меню"
-              >
+                aria-label="Переключатель мобильного меню">
                 <use
                   class="menu__icon"
                   href="img/icons-defs.svg#icon-menu"
