--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
                 aria-label="Переключатель мобильного меню">
                 <use
                   class="menu__icon"
-                  href="img/icons-defs.svg#icon-menu"
-                ></use>
+                  href="img/icons-defs.svg#icon-menu">
+                </use>
                 <use
                   class="menu__cross"
                   href="img/icons-defs.svg#icon-menu-close"
