--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,8 @@
                 </use>
                 <use
                   class="menu__cross"
-                  href="img/icons-defs.svg#icon-menu-close"></use>
+                  href="img/icons-defs.svg#icon-menu-close">
+                </use>
               </svg>
             </button>
             <div class="menu__container" data-menu>
