--- a/portfolio.html
+++ b/portfolio.html
@@ -51,9 +51,8 @@
                 <li class="header__item">
                   <a
                     href="./portfolio.html"
-                    class="header__link header__link--current"
-                    >Портфолио</a
-                  >
+                    class="header__link header__link--current">Портфолио
+                  </a>
                 </li>
                 <li class="header__item">
                   <a href="" class="header__link">Контакты</a>
