--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,7 @@
                       <svg
                         class="contact__list--smartphone"
                         width="10px"
-                        height="16px"
-                      >
+                        height="16px">
                         <use
                           href="./img/icons-defs.svg#icon-smartphone"
                         ></use>
