--- a/portfolio.html
+++ b/portfolio.html
@@ -66,9 +66,7 @@
                         class="contact__list--smartphone"
                         width="10px"
                         height="16px">
-                        <use
-                          href="./img/icons-defs.svg#icon-smartphone"
-                        ></use>
+                        <use href="./img/icons-defs.svg#icon-smartphone"></use>
                       </svg>
                       +38 099 111 11 11</a
                     >
