--- a/portfolio.html
+++ b/portfolio.html
@@ -74,8 +74,7 @@
                   <li class="contact__item">
                     <a
                       href="mailto:info@devstudio.com"
-                      class="contact__link contact__link--dark"
-                    >
+                      class="contact__link contact__link--dark">
                       <svg
                         class="contact__list--mail"
                         width="16px"
