--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,7 @@
                       <svg
                         class="contact__list--mail"
                         width="16px"
-                        height="12px"
-                      >
+                        height="12px">
                         <use href="./img/icons-defs.svg#icon-mail"></use>
                       </svg>
 
