--- a/portfolio.html
+++ b/portfolio.html
@@ -81,9 +81,8 @@
                         height="12px">
                         <use href="./img/icons-defs.svg#icon-mail"></use>
                       </svg>
-
-                      info@devstudio.com</a
-                    >
+                      info@devstudio.com
+                    </a>
                   </li>
                 </ul>
                 <ul class="social__list">
