--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,8 @@
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
-                      class="social__link">Instagram
+                      class="social__link">
+                      Instagram
                     </a>
                   </li>
                   <li class="social__item">
