--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,8 @@
                     <a
                       href="https://twitter.com/"
                       target="_blank"
-                      class="social__link">Twitter
+                      class="social__link">
+                      Twitter
                     </a>
                   </li>
                   <li class="social__item">
