--- a/portfolio.html
+++ b/portfolio.html
@@ -106,8 +106,8 @@
                     <a
                       href="https://www.facebook.com/"
                       target="_blank"
-                      class="social__link"
-                      >Facebook
+                      class="social__link">
+                      Facebook
                     </a>
                   </li>
                   <li class="social__item">
