--- a/portfolio.html
+++ b/portfolio.html
@@ -114,8 +114,8 @@
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
-                      class="social__link"
-                      >LinkedIn
+                      class="social__link">
+                      LinkedIn
                     </a>
                   </li>
                 </ul>
