--- a/portfolio.html
+++ b/portfolio.html
@@ -168,8 +168,7 @@
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-1x.jpg 1x,
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-2x.jpg 2x
                     "
-                    media="(min-width:1200px)"
-                  />
+                    media="(min-width:1200px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x.jpg 1x,
