--- a/portfolio.html
+++ b/portfolio.html
@@ -174,8 +174,7 @@
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x.jpg 1x,
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-2x.jpg 2x
                     "
-                    media="(min-width:768px)"
-                  />
+                    media="(min-width:768px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x.jpg 1x,
