--- a/portfolio.html
+++ b/portfolio.html
@@ -180,8 +180,7 @@
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x.jpg 1x,
                       ./img/portfolio/portfolio-mob/portfolio-mob-2x.jpg 2x
                     "
-                    media="(max-width:767px)"
-                  />
+                    media="(max-width:767px)"/>
                   <img
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x.jpg"
                     alt="Технокряк"
