--- a/portfolio.html
+++ b/portfolio.html
@@ -183,8 +183,7 @@
                     media="(max-width:767px)"/>
                   <img
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x.jpg"
-                    alt="Технокряк"
-                  />
+                    alt="Технокряк"/>
                 </picture>
                 <div class="list__description">
                   <h2 class="list__company">Технокряк</h2>
