--- a/portfolio.html
+++ b/portfolio.html
@@ -210,8 +210,7 @@
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-1x-1.jpg 1x,
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-2x-1.jpg 2x
                     "
-                    media="(min-width:1200px)"
-                  />
+                    media="(min-width:1200px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x-1.jpg 1x,
