--- a/portfolio.html
+++ b/portfolio.html
@@ -216,8 +216,7 @@
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x-1.jpg 1x,
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-2x-1.jpg 2x
                     "
-                    media="(min-width:768px)"
-                  />
+                    media="(min-width:768px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x-1.jpg 1x,
