--- a/portfolio.html
+++ b/portfolio.html
@@ -222,12 +222,10 @@
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x-1.jpg 1x,
                       ./img/portfolio/portfolio-mob/portfolio-mob-2x-1.jpg 2x
                     "
-                    media="(max-width:767px)"
-                  />
+                    media="(max-width:767px)"/>
                   <img
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x-1.jpg"
-                    alt="New Orlean vs Golden Star"
-                  />
+                    alt="New Orlean vs Golden Star"/>
                 </picture>
                 <div class="list__description">
                   <h2 class="list__company">
@@ -256,26 +254,22 @@
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-1x-2.jpg 1x,
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-2x-2.jpg 2x
                     "
-                    media="(min-width:1200px)"
-                  />
+                    media="(min-width:1200px)" />
                   <source
                     srcset="
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x-2.jpg 1x,
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-2x-2.jpg 2x
                     "
-                    media="(min-width:768px)"
-                  />
+                    media="(min-width:768px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x-2.jpg 1x,
                       ./img/portfolio/portfolio-mob/portfolio-mob-2x-2.jpg 2x
                     "
-                    media="(max-width:767px)"
-                  />
+                    media="(max-width:767px)"/>
                   <img
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x-2.jpg"
-                    alt="Seafood"
-                  />
+                    alt="Seafood"/>
                 </picture>
                 <div class="list__description">
                   <h2 class="list__company">Ресторан Seafood</h2>
@@ -301,15 +295,13 @@
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-1x-3.jpg 1x,
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-2x-3.jpg 2x
                     "
-                    media="(min-width:1200px)"
-                  />
+                    media="(min-width:1200px)" />
                   <source
                     srcset="
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x-3.jpg 1x,
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-2x-3.jpg 2x
                     "
-                    media="(min-width:768px)"
-                  />
+                    media="(min-width:768px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x-3.jpg 1x,
