--- a/portfolio.html
+++ b/portfolio.html
@@ -307,12 +307,10 @@
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x-3.jpg 1x,
                       ./img/portfolio/portfolio-mob/portfolio-mob-2x-3.jpg 2x
                     "
-                    media="(max-width:767px)"
-                  />
+                    media="(max-width:767px)"/>
                   <img
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x-3.jpg"
-                    alt="Prime"
-                  />
+                    alt="Prime"/>
                 </picture>
                 <div class="list__description">
                   <h2 class="list__company">Проект Prime</h2>
@@ -338,8 +336,7 @@
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-1x-4.jpg 1x,
                       ./img/portfolio/portfolio-desktop/portfolio-desktop-2x-4.jpg 2x
                     "
-                    media="(min-width:1200px)"
-                  />
+                    media="(min-width:1200px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x-4.jpg 1x,
