--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                 <li class="header__item">
                   <a
                     href="./index.html"
-                    class="header__link header__link--current"
-                    >Студия
+                    class="header__link header__link--current">Студия
                   </a>
                 </li>
                 <li class="header__item">
@@ -84,7 +83,7 @@
                           href="./img/icons-defs.svg#icon-smartphone">
                         </use>
                       </svg>
-                      +38 067 111 11 11
+                      +38 096 111 11 11
                     </a>
                   </li>
 
