--- a/portfolio.html
+++ b/portfolio.html
@@ -554,9 +554,7 @@
       <div class="container footer__conatiner">
         <div class="footer__box">
           <div class="adress">
-            <a href="index.html" class="logo"
-              >Web<span class="logo--white">Studio</span></a
-            >
+            <a href="index.html" class="logo">Web<span class="logo--white">Studio</span></a>
             <address class="adress__box">
               <ul>
                 <li class="adress__item">
