--- a/portfolio.html
+++ b/portfolio.html
@@ -564,9 +564,7 @@
                   <a href="mailto:info@example.com" class="contact__link--small">info@example.com</a>
                 </li>
                 <li class="contact__item contact__item--center">
-                  <a href="tel:+380991111111" class="contact__link--small">
-                    +38 099 111 11 11</a
-                  >
+                  <a href="tel:+380991111111" class="contact__link--small">+38 099 111 11 11</a>
                 </li>
               </ul>
             </address>
