--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
                 <source
                   srcset="
                     ./img/index/desktop-app-1x.jpg 1x,
-                    ./img/index/desktop-app-2x.jpg 2x
-                  "
+                    ./img/index/desktop-app-2x.jpg 2x"
                   media="(min-width:1200px)"/>
                 <img
                   src="./img/index/desktop-app-1x.jpg"
