--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
                 <source
                   srcset="
                     ./img/index/mobile-app-1x.jpg 1x,
-                    ./img/index/mobile-app-2x.jpg 2x
-                  "
+                    ./img/index/mobile-app-2x.jpg 2x"
                   media="(min-width:1200px)"/>
 
                 <img
