--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
                 <source
                   srcset="
                     ./img/index/design_solutions-1x.jpg 1x,
-                    ./img/index/design_solutions-2x.jpg 2x
-                  "
+                    ./img/index/design_solutions-2x.jpg 2x"
                   media="(min-width:1200px)"/>
 
                 <img
