--- a/index.html
+++ b/index.html
@@ -215,11 +215,9 @@
                     ./img/index/design_solutions-1x.jpg 1x,
                     ./img/index/design_solutions-2x.jpg 2x"
                   media="(min-width:1200px)"/>
-
                 <img
                   src="./img/index/design_solutions-1x.jpg"
-                  alt="Дизайнерские решения"
-                />
+                  alt="Дизайнерские решения"/>
               </picture>
               <span class="occupation__description">Дизайнерские решения</span>
             </li>
