--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
                 <source
                   srcset="
                     ./img/index/ihor-desktop-1x.jpg 1x,
-                    ./img/index/ihor-desktop-2x.jpg 2x
-                  "
+                    ./img/index/ihor-desktop-2x.jpg 2x"
                   media="(min-width:1200px)"/>
                 <source
                   srcset="
