--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
                 <source
                   srcset="
                     ./img/index/ihor-tablet-1x.jpg 1x,
-                    ./img/index/ihor-tablet-2x.jpg 2x
-                  "
+                    ./img/index/ihor-tablet-2x.jpg 2x"
                   media="(min-width:768px)"/>
                 <source
                   srcset="
