--- a/index.html
+++ b/index.html
@@ -290,8 +290,7 @@
                 <source
                   srcset="
                     ./img/index/olha-desktop-1x.jpg 1x,
-                    ./img/index/olha-desktop-2x.jpg 2x
-                  "
+                    ./img/index/olha-desktop-2x.jpg 2x"
                   media="(min-width:1200px)"/>
                 <source
                   srcset="
