--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@
                 <source
                   srcset="
                     ./img/index/olha-mob-1x.jpg 1x,
-                    ./img/index/olha-mob-2x.jpg 2x
-                  "
+                    ./img/index/olha-mob-2x.jpg 2x"
                   media="(max-width:767px)"/>
                 <img
                   src="./img/index/olha-mob-1x.jpg"
