--- a/index.html
+++ b/index.html
@@ -350,8 +350,7 @@
                 <source
                   srcset="
                     ./img/index/nikolay-tablet-1x.jpg 1x,
-                    ./img/index/nikolay-tablet-2x.jpg 2x
-                  "
+                    ./img/index/nikolay-tablet-2x.jpg 2x"
                   media="(min-width:768px)"/>
                 <source
                   srcset="
