--- a/index.html
+++ b/index.html
@@ -409,8 +409,7 @@
                 <source
                   srcset="
                     ./img/index/mikhail-mob-1x.jpg 1x,
-                    ./img/index/mikhail-mob-2x.jpg 2x
-                  "
+                    ./img/index/mikhail-mob-2x.jpg 2x"
                   media="(max-width:767px)"/>
                 <img
                   src="./img/index/mikhail-mob-1x.jpg"
