--- a/portfolio.html
+++ b/portfolio.html
@@ -342,15 +342,13 @@
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-1x-4.jpg 1x,
                       ./img/portfolio/portfolio-tablet/portfolio-tablet-2x-4.jpg 2x
                     "
-                    media="(min-width:768px)"
-                  />
+                    media="(min-width:768px)"/>
                   <source
                     srcset="
                       ./img/portfolio/portfolio-mob/portfolio-mob-1x-4.jpg 1x,
                       ./img/portfolio/portfolio-mob/portfolio-mob-2x-4.jpg 2x
                     "
-                    media="(max-width:767px)"
-                  />
+                    media="(max-width:767px)"/>
                   <img
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x-4.jpg"
                     alt="Boxes"
