--- a/portfolio.html
+++ b/portfolio.html
@@ -407,6 +407,7 @@
             </li>
             <li class="list__item">
               <a href="" class="list__link">
+<div>
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -444,6 +445,8 @@
                     alt="Limited Edition"
                   />
                 </picture>
+</div>
+
                 <div class="list__description">
                   <h2 class="list__company">Издание Limited Edition</h2>
                   <p class="list__job">Дизайн</p>
