--- a/portfolio.html
+++ b/portfolio.html
@@ -456,6 +456,7 @@
 
             <li class="list__item">
               <a href="" class="list__link">
+<div>                
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -493,6 +494,7 @@
                     alt="LAB"
                   />
                 </picture>
+</div>                
                 <div class="list__description">
                   <h2 class="list__company">Проект LAB</h2>
                   <p class="list__job">Маркетинг</p>
