--- a/portfolio.html
+++ b/portfolio.html
@@ -503,6 +503,7 @@
             </li>
             <li class="list__item">
               <a href="" class="list__link">
+<div>                
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -540,6 +541,7 @@
                     alt="Growing Business"
                   />
                 </picture>
+</div>
                 <div class="list__description">
                   <h2 class="list__company">Growing Business</h2>
                   <p class="list__job">Приложение</p>
