--- a/portfolio.html
+++ b/portfolio.html
@@ -362,6 +362,7 @@
             </li>
             <li class="list__item">
               <a href="" class="list__link">
+<div>                
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -399,6 +400,7 @@
                     alt="Inspiration has no Borders"
                   />
                 </picture>
+</div>                
                 <div class="list__description">
                   <h2 class="list__company">Inspiration has no Borders</h2>
                   <p class="list__job">Веб-сайт</p>
