--- a/portfolio.html
+++ b/portfolio.html
@@ -279,6 +279,7 @@
             </li>
             <li class="list__item">
               <a href="" class="list__link">
+                <div>  
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -312,6 +313,7 @@
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x-3.jpg"
                     alt="Prime"/>
                 </picture>
+</div>                                  
                 <div class="list__description">
                   <h2 class="list__company">Проект Prime</h2>
                   <p class="list__job">Маркетинг</p>
