--- a/portfolio.html
+++ b/portfolio.html
@@ -194,6 +194,7 @@
 
             <li class="list__item">
               <a href="" class="list__link">
+<div>
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -227,6 +228,7 @@
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x-1.jpg"
                     alt="New Orlean vs Golden Star"/>
                 </picture>
+</div>
                 <div class="list__description">
                   <h2 class="list__company">
                     Постер New Orlean vs Golden Star
@@ -238,6 +240,7 @@
 
             <li class="list__item">
               <a href="" class="list__link">
+<div>
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -271,6 +274,7 @@
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x-2.jpg"
                     alt="Seafood"/>
                 </picture>
+</div>  
                 <div class="list__description">
                   <h2 class="list__company">Ресторан Seafood</h2>
                   <p class="list__job">Приложение</p>
