--- a/portfolio.html
+++ b/portfolio.html
@@ -151,6 +151,7 @@
           <ul class="portfolio-list">
             <li class="list__item">
               <a href="" class="list__link">
+<div>
                 <div class="overlay">
                   <div class="overlay__content">
                     <p class="overlay__text">
@@ -185,6 +186,7 @@
                     src="./img/portfolio/portfolio-desktop/portfolio-desktop-1x.jpg"
                     alt="Технокряк"/>
                 </picture>
+</div>
                 <div class="list__description">
                   <h2 class="list__company">Технокряк</h2>
                   <p class="list__job">Веб-сайт</p>
