--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- Домашнее задание 8.17 -->
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -9,38 +8,44 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"/>
-    <title>WebStudio by Rick</title>
+      rel="stylesheet"
+    />
+    <title>Web Studio</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+    <!-- Header -->
 
-<!-- Header -->
     <header class="header">
       <div class="container">
         <div class="header__container">
           <nav class="header__nav">
-            <a href="index.html" class="logo logo--absolute">Web<span class="logo--dark">Studio</span></a>
+            <a href="index.html" class="logo logo--absolute"
+              >Web<span class="logo--dark">Studio</span>
+            </a>
             <button
               type="button"
               class="menu__button"
               aria-expanded="false"
-              data-menu-button>
+              data-menu-button
+            >
               <svg
                 width="40"
                 height="40"
-                aria-label="Переключатель мобильного меню">
+                aria-label="Переключатель мобильного меню"
+              >
                 <use
                   class="menu__icon"
-                  href="img/icons-defs.svg#icon-menu">
-                </use>
+                  href="img/icons-defs.svg#icon-menu"
+                ></use>
                 <use
                   class="menu__cross"
-                  href="img/icons-defs.svg#icon-menu-close">
-                </use>
+                  href="img/icons-defs.svg#icon-menu-close"
+                ></use>
               </svg>
             </button>
             <div class="menu__container" data-menu>
@@ -48,7 +53,8 @@
                 <li class="header__item">
                   <a
                     href="./index.html"
-                    class="header__link header__link--current">Студия
+                    class="header__link header__link--current"
+                    >Студия
                   </a>
                 </li>
                 <li class="header__item">
@@ -60,49 +66,52 @@
               </ul>
               <div>
                 <ul class="contact__list">
-				                  <li class="contact__item contact__item--margin-right">
-                    <a href="tel:+380961111111" class="contact__link">
+                  <li class="contact__item contact__item--margin-right">
+                    <a href="tel:+380991111111" class="contact__link">
                       <svg
                         class="contact__list--smartphone"
                         width="10px"
-                        height="16px">
+                        height="16px"
+                      >
                         <use
-                          href="./img/icons-defs.svg#icon-smartphone">
-                        </use>
+                          href="./img/icons-defs.svg#icon-smartphone"
+                        ></use>
                       </svg>
-                      +38 096 111 11 11
-                    </a>
+                      +38 099 111 11 11</a
+                    >
                   </li>
-				          <li class="contact__item">
+                  <li class="contact__item">
                     <a
                       href="mailto:info@devstudio.com"
-                      class="contact__link contact__link--dark">
+                      class="contact__link contact__link--dark"
+                    >
                       <svg
                         class="contact__list--mail"
                         width="16px"
-                        height="12px">
+                        height="12px"
+                      >
                         <use href="./img/icons-defs.svg#icon-mail"></use>
                       </svg>
-                      info@devstudio.com
-                    </a>
-                  </li>
 
+                      info@devstudio.com</a
+                    >
+                  </li>
                 </ul>
                 <ul class="social__list">
                   <li class="social__item">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
-                      class="social__link">
-                      Instagram
+                      class="social__link"
+                      >Instagram
                     </a>
                   </li>
                   <li class="social__item">
                     <a
                       href="https://twitter.com/"
                       target="_blank"
-                      class="social__link">
-                      Twitter
+                      class="social__link"
+                      >Twitter
                     </a>
                   </li>
                   <li class="social__item">
@@ -129,8 +138,8 @@
       </div>
     </header>
     <main>
+      <!-- Hero -->
 
-<!-- Hero -->
       <section class="hero__container">
         <div class="container">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
@@ -138,7 +147,8 @@
         </div>
       </section>
 
-<!-- Dignity -->
+      <!-- Dignity -->
+
       <section class="section">
         <div class="container">
           <h2 class="dignity__tile--hidden">Наши достоинства</h2>
@@ -175,7 +185,8 @@
         </div>
       </section>
 
-<!-- Occupation -->
+      <!-- Occupation -->
+
       <section class="occupation section">
         <div class="container">
           <h2 class="occupation__title">Чем мы занимаемся</h2>
@@ -185,11 +196,15 @@
                 <source
                   srcset="
                     ./img/index/desktop-app-1x.jpg 1x,
-                    ./img/index/desktop-app-2x.jpg 2x"
-                  media="(min-width:1200px)"/>
+                    ./img/index/desktop-app-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+
                 <img
                   src="./img/index/desktop-app-1x.jpg"
-                  alt="Десктопные приложения"/>
+                  alt="Десктопные приложения"
+                />
               </picture>
               <span class="occupation__description">Десктопные приложения</span>
             </li>
@@ -199,12 +214,15 @@
                 <source
                   srcset="
                     ./img/index/mobile-app-1x.jpg 1x,
-                    ./img/index/mobile-app-2x.jpg 2x"
-                  media="(min-width:1200px)"/>
+                    ./img/index/mobile-app-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
 
                 <img
                   src="./img/index/mobile-app-1x.jpg"
-                  alt="Мобильные приложения"/>
+                  alt="Мобильные приложения"
+                />
               </picture>
               <span class="occupation__description">Мобильные приложения</span>
             </li>
@@ -213,11 +231,15 @@
                 <source
                   srcset="
                     ./img/index/design_solutions-1x.jpg 1x,
-                    ./img/index/design_solutions-2x.jpg 2x"
-                  media="(min-width:1200px)"/>
+                    ./img/index/design_solutions-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
+
                 <img
                   src="./img/index/design_solutions-1x.jpg"
-                  alt="Дизайнерские решения"/>
+                  alt="Дизайнерские решения"
+                />
               </picture>
               <span class="occupation__description">Дизайнерские решения</span>
             </li>
@@ -225,7 +247,8 @@
         </div>
       </section>
 
-<!-- Team -->
+      <!-- Team -->
+
       <section class="team section">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
@@ -235,22 +258,30 @@
                 <source
                   srcset="
                     ./img/index/ihor-desktop-1x.jpg 1x,
-                    ./img/index/ihor-desktop-2x.jpg 2x"
-                  media="(min-width:1200px)"/>
+                    ./img/index/ihor-desktop-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
                 <source
                   srcset="
                     ./img/index/ihor-tablet-1x.jpg 1x,
-                    ./img/index/ihor-tablet-2x.jpg 2x"
-                  media="(min-width:768px)"/>
+                    ./img/index/ihor-tablet-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
                 <source
                   srcset="
                     ./img/index/ihor-mob-1x.jpg 1x,
-                    ./img/index/ihor-mob-2x.jpg 2x"
-                  media="(max-width:767px)"/>
+                    ./img/index/ihor-mob-2x.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                />
                 <img
                   src="./img/index/ihor-mob-1x.jpg"
-                  alt="Фото Игорь Демьяненко"/>
+                  alt="Фото Игорь Демьяненко"
+                />
               </picture>
+
               <h3 class="team__name">Игорь Демьяненко</h3>
               <p class="team__position">Product Designer</p>
               <ul class="social-box">
@@ -289,21 +320,28 @@
                 <source
                   srcset="
                     ./img/index/olha-desktop-1x.jpg 1x,
-                    ./img/index/olha-desktop-2x.jpg 2x"
-                  media="(min-width:1200px)"/>
+                    ./img/index/olha-desktop-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
                 <source
                   srcset="
                     ./img/index/olha-tablet-1x.jpg 1x,
-                    ./img/index/olha-tablet-2x.jpg 2x"
-                  media="(min-width:768px)"/>
+                    ./img/index/olha-tablet-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
                 <source
                   srcset="
                     ./img/index/olha-mob-1x.jpg 1x,
-                    ./img/index/olha-mob-2x.jpg 2x"
-                  media="(max-width:767px)"/>
+                    ./img/index/olha-mob-2x.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                />
                 <img
                   src="./img/index/olha-mob-1x.jpg"
-                  alt="Фото Ольга Репина"/>
+                  alt="Фото Ольга Репина"
+                />
               </picture>
               <h3 class="team__name">Ольга Репина</h3>
               <p class="team__position">Frontend Developer</p>
@@ -338,26 +376,34 @@
                 </li>
               </ul>
             </li>
+
             <li class="team__item">
               <picture>
                 <source
                   srcset="
                     ./img/index/nikolay-desktop-1x.jpg 1x,
-                    ./img/index/nikolay-desktop-2x.jpg 2x"
-                  media="(min-width:1200px)"/>
+                    ./img/index/nikolay-desktop-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
                 <source
                   srcset="
                     ./img/index/nikolay-tablet-1x.jpg 1x,
-                    ./img/index/nikolay-tablet-2x.jpg 2x"
-                  media="(min-width:768px)"/>
+                    ./img/index/nikolay-tablet-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
                 <source
                   srcset="
                     ./img/index/nikolay-mob-1x.jpg 1x,
-                    ./img/index/nikolay-mob-2x.jpg 2x"
-                  media="(max-width:767px)"/>
+                    ./img/index/nikolay-mob-2x.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                />
                 <img
                   src="./img/index/nikolay-mob-1x.jpg"
-                  alt="Фото Николай Тарасов"/>
+                  alt="Фото Николай Тарасов"
+                />
               </picture>
               <h3 class="team__name">Николай Тарасов</h3>
               <p class="team__position">Marketing</p>
@@ -397,21 +443,28 @@
                 <source
                   srcset="
                     ./img/index/mikhail-desktop-1x.jpg 1x,
-                    ./img/index/mikhail-desktop-2x.jpg 2x"
-                  media="(min-width:1200px)"/>
+                    ./img/index/mikhail-desktop-2x.jpg 2x
+                  "
+                  media="(min-width:1200px)"
+                />
                 <source
                   srcset="
                     ./img/index/mikhail-tablet-1x.jpg 1x,
-                    ./img/index/mikhail-tablet-2x.jpg 2x"
-                  media="(min-width:768px)"/>
+                    ./img/index/mikhail-tablet-2x.jpg 2x
+                  "
+                  media="(min-width:768px)"
+                />
                 <source
                   srcset="
                     ./img/index/mikhail-mob-1x.jpg 1x,
-                    ./img/index/mikhail-mob-2x.jpg 2x"
-                  media="(max-width:767px)"/>
+                    ./img/index/mikhail-mob-2x.jpg 2x
+                  "
+                  media="(max-width:767px)"
+                />
                 <img
                   src="./img/index/mikhail-mob-1x.jpg"
-                  alt="Фото Михаил Ермаков"/>
+                  alt="Фото Михаил Ермаков"
+                />
               </picture>
               <h3 class="team__name">Михаил Ермаков</h3>
               <p class="team__position">UI Designer</p>
@@ -500,33 +553,34 @@
       </section>
     </main>
 
-<!-- Footer-->
+    <!-- Footer-->
+
     <footer class="footer">
       <div class="container footer__conatiner">
         <div class="footer__box">
           <div class="adress">
-            <a href="index.html" class="logo">
-              Web
-              <span class="logo--white">Studio</span>
-            </a>
+            <a href="index.html" class="logo"
+              >Web<span class="logo--white">Studio</span></a
+            >
             <address class="adress__box">
               <ul>
                 <li class="adress__item">
                   <p class="adress__name">г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
                 <li class="contact__item contact__item--center">
-                  <a href="mailto:info@example.com" class="contact__link--small">
-                    info@example.com
-                  </a>
+                  <a href="mailto:info@example.com" class="contact__link--small"
+                    >info@example.com</a
+                  >
                 </li>
                 <li class="contact__item contact__item--center">
-                  <a href="tel:+380671111111" class="contact__link--small">
-                    +38 067 111 11 11
-                  </a>
+                  <a href="tel:+380991111111" class="contact__link--small">
+                    +38 099 111 11 11</a
+                  >
                 </li>
               </ul>
             </address>
           </div>
+
           <div class="social">
             <p class="social__title">присоединяйтесь</p>
             <ul class="social-box social-box--dark">
@@ -570,7 +624,9 @@
               name="email"
               id="email"
               placeholder="E-mail"
-              class="subscribe__input"/>
+              class="subscribe__input"
+            />
+
             <button class="button footer__button" data-modal-open>
               Подписаться
               <svg width="24px" height="24px" class="subscribe__icon">
@@ -582,7 +638,8 @@
       </div>
     </footer>
 
-<!-- Modal Box -->
+    <!-- Modal Box -->
+
     <div class="backdrop backdrop--hidden" data-modal>
       <div class="modal">
         <button class="close__button" data-modal-close>
@@ -611,7 +668,8 @@
                 name="tel"
                 id="tel"
                 class="modal__input"
-                title="+380 (11) 111-11-11"/>
+                title="+380 (11) 111-11-11"
+              />
               <svg class="modal__icon">
                 <use href="./img/icons-defs.svg#icon-phone-ico"></use>
               </svg>
@@ -626,7 +684,8 @@
                 name="email"
                 id="mail"
                 required
-                class="modal__input"/>
+                class="modal__input"
+              />
               <svg class="modal__icon">
                 <use href="./img/icons-defs.svg#icon-email-ico"></use>
               </svg>
@@ -634,21 +693,25 @@
           </div>
 
           <div class="modal__field comment">
-            <label for="comment" class="modal__lable">Комментарий</label>
+            <label for="comment" class="modal__lable"> Комментарий </label>
             <textarea
-              class="modal__textarea" name="comment" id="comment" placeholder="Введите текст">
-            </textarea>
+              class="modal__textarea"
+              name="comment"
+              id="comment"
+              placeholder="Введите текст"
+            ></textarea>
           </div>
 
           <div class="agreement">
             <label class="agreemen__label">
               <span class="agreement__box">
-                <input type="checkbox" class="agreement__input"/>
-                 Соглашаюсь с рассылкой и принимаю&nbsp;
+                <input type="checkbox" class="agreement__input" /> Соглашаюсь с
+                рассылкой и принимаю&nbsp;
                 <svg class="agreement__icon">
                   <use href="img/icons-defs.svg#icon-check"></use>
                 </svg>
               </span>
+
               <a href="">Условия договора</a>
             </label>
           </div>
@@ -657,7 +720,6 @@
         </form>
       </div>
     </div>
-    
     <script src="./js/modal.js"></script>
     <script>
       (() => {
